# LCD-show

./: DPI5_7_800_480-show  DPI7_1024_600-show  LCD-hdmi  LCD101H-show  LCD101S-show  LCD101TMP-show  LCD101Y-show  LCD154-show  LCD24-3A+-show  LCD24-show  LCD28-show  LCD32-B-Rev1-show  LCD32-show  LCD35-show  LCD35-show-rpi5  LCD35DPI-show  LCD35H_960_640-show  LCD397-show  LCD43-show  LCD5-show  LCD55-show  LCD7B-show  LCD7C-show  LCD7H-show  LCD7S-show  MHS24-show  MHS32-show  MHS35-show  MHS35B-show  MHS35IPS-show  MHS40-show  MHS40C-show  MIS35-show  MPI3508-show  MPI3508_480_320-show  MPI3508_600_400-show  MPI3508_720_480-show  MPI3508_810_540-show  MPI3508_960_640-show  MPI3510-show  (+24 more)
Arch-Linux/: LCD-hdmi  LCD35-show  rotate.sh
Arch-Linux/usr/: 99-calibration.conf-35-0  99-calibration.conf-35-270  99-fbdev-fbcp.conf  99-fbdev.conf  99-fbdev.conf-HDMI
arch/: LCD5-show  config-5.txt
boot/: config-28.txt  config-32.txt  config-35-480X320.txt  config-35-600X400.txt  config-35-720X480.txt  config-35-810X540.txt  config-35-960X640.txt  config-35.txt  config-35DPI.txt  config-397.txt  config-43.txt  config-5.txt  config-7B-800x480.txt  config-7C-1024x600.txt  config-MPI5001.txt  config-mhs24.txt  config-mhs32.txt  config-mhs35.txt  config-mis35.txt  config-nomal-11.4-32.txt  config-nomal-11.4-64.txt  config-nomal-12.1-32.txt  config-nomal-12.10-32.txt  config-nomal-12.10-64.txt  config-nomal.txt  config-noobs-nomal.txt  config.txt.bak
etc/: .bash_profile  autostart  modules  modules-original  rc.local  rc_x11.local
etc/modprobe.d/: fbtft.conf
img/: IMG_0831.HEIC
usr/: 40-libinput.conf-0  40-libinput.conf-180  40-libinput.conf-270  40-libinput.conf-90  40-libinput.conf-FLIP-H  40-libinput.conf-FLIP-V  40-libinput.conf-HDMI7C  99-calibration.conf-24  99-calibration.conf-28  99-calibration.conf-32  99-calibration.conf-32-0  99-calibration.conf-32-180  99-calibration.conf-32-90  99-calibration.conf-35-180  99-calibration.conf-3508  99-calibration.conf-3508-180  99-calibration.conf-3508-270  99-calibration.conf-3508-90  99-calibration.conf-3508-FLIP-H  99-calibration.conf-3508-FLIP-V  99-calibration.conf-397  99-calibration.conf-397-0  99-calibration.conf-397-180  99-calibration.conf-397-270  99-calibration.conf-397-90  99-calibration.conf-397-FLIP-H  99-calibration.conf-397-FLIP-V  99-calibration.conf-3971-0  99-calibration.conf-3971-180  99-calibration.conf-3971-270  99-calibration.conf-3971-90  99-calibration.conf-3971-FLIP-H  99-calibration.conf-3971-FLIP-V  99-calibration.conf-43  99-calibration.conf-5  99-calibration.conf-5-180  99-calibration.conf-5-270  99-calibration.conf-5-90  99-calibration.conf-5-FLIP-H  99-calibration.conf-5-FLIP-V  (+64 more)
usr/fbcp-ili9341/: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  config.h  diff.cpp  diff.h  display.cpp  display.h  dma.cpp  dma.h  fbcp-ili9341.cpp  freeplaytech_waveshare32b.h  gpu.cpp  gpu.h  hx8357d.cpp  hx8357d.h  ili9341.cpp  ili9341.h  ili9486.cpp  ili9486.h  ili9486l.h  ili9488.cpp  ili9488.h  keyboard.cpp  keyboard.h  low_battery.cpp  low_battery.h  mailbox.cpp  mailbox.h  mem_alloc.cpp  mem_alloc.h  mpi3501.cpp  mpi3501.h  mz61581.cpp  mz61581.h  pitft_28r_ili9341.h  pitft_35r_hx8357d.h  spi.cpp  spi.h  (+14 more)
usr/fbcp-ili9341/kernel/: Makefile  bcm2835_spi_display.c  build_kernel_module.sh  start_kernel_module.sh  stop_kernel_module.sh
usr/rpi-fbcp/: CMakeLists.txt  LICENSE  README.md  main.c
